--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular-popper": "^2.0.0",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "mongoose": "^5.4.2",
+    "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.4",
-    "@angular/cli": "~7.0.5",
+    "@angular/cli": "^7.0.7",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
